Rename and polish ComposedRetryListenerTests